modified crop roi step1

--- a/app/src/main/res/layout/content_crop_roistep1.xml
+++ b/app/src/main/res/layout/content_crop_roistep1.xml
@@ -124,6 +124,8 @@
                     android:id="@+id/txt_crop_ro1_step_label_yield_units"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:paddingTop="0dp"
+                    android:layout_marginTop="-2dp"
                     android:background="@drawable/edittext_right_corners_green"
                     android:textColor="@color/white"
                     android:text="@string/units"
@@ -158,6 +160,8 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/edittext_left_corners_green"
                     android:textColor="@color/white"
+                    android:paddingTop="0dp"
+                    android:layout_marginTop="-2dp"
                     android:text="UGX"
                     android:textSize="16sp"
                     android:gravity="center"
@@ -179,6 +183,8 @@
                     android:id="@+id/txt_crop_ro1_step_label_yield_units2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:paddingTop="0dp"
+                    android:layout_marginTop="-2dp"
                     android:background="@drawable/edittext_right_corners_green"
                     android:textColor="@color/white"
                     android:text="@string/per_unit"
