added date picker to spray and harvest

--- a/app/src/main/res/navigation/farm_records_nav_graph.xml
+++ b/app/src/main/res/navigation/farm_records_nav_graph.xml
@@ -199,6 +199,9 @@
         <action
             android:id="@+id/action_cropsNotesListFragment_to_addCropNotesFragment"
             app:destination="@id/addCropNotesFragment" />
+        <action
+            android:id="@+id/action_cropsNotesListFragment_to_cropListFragment"
+            app:destination="@id/cropListFragment" />
     </fragment>
     <fragment
         android:id="@+id/addCropNotesFragment"
