--- a/app/src/main/res/layout/fragment_crop_harvest.xml
+++ b/app/src/main/res/layout/fragment_crop_harvest.xml
@@ -80,6 +80,7 @@
                             android:textSize="14sp"/>
 
                         <ImageView
+                            android:id="@+id/image_date_picker"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
