--- a/app/src/main/res/layout/fragment_crop_spraying.xml
+++ b/app/src/main/res/layout/fragment_crop_spraying.xml
@@ -93,6 +93,7 @@
                             android:layout_marginRight="10dp"/>
 
                         <ImageView
+                            android:id="@+id/image_date_picker"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
