--- a/app/src/main/res/layout/buy_inputs_card_addresses.xml
+++ b/app/src/main/res/layout/buy_inputs_card_addresses.xml
@@ -77,7 +77,7 @@
                 android:layout_height="22dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitXY"
-                android:src="@drawable/ic_edit"
+                android:src="@drawable/ic_edit_profile"
                 android:tint="@color/colorAccentGreen" />
 
             <ImageButton
