--- a/app/src/main/res/layout/buy_inputs_checkout.xml
+++ b/app/src/main/res/layout/buy_inputs_checkout.xml
@@ -61,7 +61,7 @@
                             android:id="@+id/checkout_edit_shipping"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
-                            android:src="@drawable/ic_edit"
+                            android:src="@drawable/ic_edit_profile"
                             android:tint="@color/colorAccent"
                             android:layout_alignParentEnd="true"
                             android:layout_marginEnd="5dp"
@@ -153,7 +153,7 @@
                             android:id="@+id/checkout_edit_shipping_method"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
-                            android:src="@drawable/ic_edit"
+                            android:src="@drawable/ic_edit_profile"
                             android:tint="@color/colorAccent"
                             android:layout_alignParentEnd="true"
                             android:layout_marginEnd="5dp"
