--- a/app/src/main/res/layout/update_account.xml
+++ b/app/src/main/res/layout/update_account.xml
@@ -35,7 +35,7 @@
                     android:id="@+id/user_photo_edit_fab"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_edit"
+                    android:src="@drawable/ic_edit_profile"
                     android:tint="@color/white"
                     android:visibility="gone"
                     app:backgroundTint="@color/colorAccentBlue"
