--- a/app/src/main/res/layout/activity_main_dashboard.xml
+++ b/app/src/main/res/layout/activity_main_dashboard.xml
@@ -7,6 +7,9 @@
     android:orientation="vertical"
     tools:context=".activities.DashboardActivity">
 
+    <include
+        android:id="@+id/myToolbar"
+        layout="@layout/toolbar" />
 
     <FrameLayout
         android:id="@+id/fragment_container"
