Account fragment Fixes

--- a/app/src/main/res/layout/activity_main_dashboard.xml
+++ b/app/src/main/res/layout/activity_main_dashboard.xml
@@ -12,7 +12,7 @@
         layout="@layout/toolbar" />
 
     <FrameLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/main_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
        />
